Basic functionalities implemented, application usable.