@@ -5,7 +5,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -15,7 +14,6 @@ public class CategoryService {
     public List<CategoryDto> findAllCategories(){
         return categoryRepository.findAll().stream()
                 .map(CategoryDtoMapper::toDto)
-                .collect(Collectors.toList());
-
+                .toList();
     }
 }
